force-app/main/default/objects/Vehicle__c/fields/Calendar_Enabled__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Enabled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Calendar Enabled</label>
    <type>Checkbox</type>
</CustomField>