force-app/main/default/objects/Vehicle__c/fields/IDs__c.field-meta.xml
<CustomField>
    <fullName>IDs__c</fullName>
    <label>IDs</label>
    <length>255</length>
    <type>Text</type>
</CustomField>