force-app/main/default/objects/Vehicle__c/fields/In_Service__c.field-meta.xml
<CustomField>
    <fullName>In_Service__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Service</label>
    <type>Checkbox</type>
</CustomField>