force-app/main/default/objects/Vehicle__c/fields/Options__c.field-meta.xml
<CustomField>
    <fullName>Options__c</fullName>
    <label>Options</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>MDLS</fullName>
            </value>
            <value>
                <fullName>RENA</fullName>
            </value>
            <value>
                <fullName>AF02</fullName>
            </value>
            <value>
                <fullName>APF1</fullName>
            </value>
            <value>
                <fullName>APH2</fullName>
            </value>
            <value>
                <fullName>APPB</fullName>
            </value>
            <value>
                <fullName>AU01</fullName>
            </value>
            <value>
                <fullName>BC0R</fullName>
            </value>
            <value>
                <fullName>BP00</fullName>
            </value>
            <value>
                <fullName>BR00</fullName>
            </value>
            <value>
                <fullName>BS00</fullName>
            </value>
            <value>
                <fullName>CDM0</fullName>
            </value>
            <value>
                <fullName>CH05</fullName>
            </value>
            <value>
                <fullName>PBCW</fullName>
            </value>
            <value>
                <fullName>CW00</fullName>
            </value>
            <value>
                <fullName>DCF0</fullName>
            </value>
            <value>
                <fullName>DRLH</fullName>
            </value>
            <value>
                <fullName>DSH7</fullName>
            </value>
            <value>
                <fullName>DV4W</fullName>
            </value>
            <value>
                <fullName>FG02</fullName>
            </value>
            <value>
                <fullName>FR04</fullName>
            </value>
            <value>
                <fullName>HP00</fullName>
            </value>
            <value>
                <fullName>IDBA</fullName>
            </value>
            <value>
                <fullName>IX01</fullName>
            </value>
            <value>
                <fullName>LP01</fullName>
            </value>
            <value>
                <fullName>ME02</fullName>
            </value>
            <value>
                <fullName>MI01</fullName>
            </value>
            <value>
                <fullName>PF01</fullName>
            </value>
            <value>
                <fullName>PI01</fullName>
            </value>
            <value>
                <fullName>PK00</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>