force-app/main/default/objects/Vehicle__c/fields/Vehicle_ID__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_ID__c</fullName>
    <label>Vehicle ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>